# bahn-info

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: main.py
backend/app/api/routes/: delays.py
backend/app/core/database/delay/: delay_collector.py  delay_tables.py
frontend/: pyproject.toml
