[project]
name = "frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "Lukas Scholz",email = "lscholz14@googlemail.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit (>=1.47.0,<2.0.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
    "folium (>=0.20.0,<0.21.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
